feat(taxi-dispatcher): Changed parameter for setupTables script and added new methods for DB interaction in the dispatching server